Cross reference test.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,45 +1,45 @@
 .Engine
-* xref:documentation.adoc[Documentation]
-* xref:jme3.adoc[jMonkeyEngine 3]
+* <<documentation#,Documentation>>
+* <<jme3#,jMonkeyEngine 3>>
 ** Beginner Tutorials
-*** xref:jme3/beginner/hello_simpleapplication.adoc[Hello SimpleApplication]
-*** xref:jme3/beginner/hello_node.adoc[Hello Node]
-*** xref:jme3/beginner/hello_asset.adoc[Hello Asset]
-*** xref:jme3/beginner/hello_main_event_loop.adoc[Hello Main Event Loop]
-*** xref:jme3/beginner/hello_input_system.adoc[Hello Input System]
-*** xref:jme3/beginner/hello_material.adoc[Hello Material]
-*** xref:jme3/beginner/hello_animation.adoc[Hello Animation]
-*** xref:jme3/beginner/hello_picking.adoc[Hello Picking]
-*** xref:jme3/beginner/hello_collision.adoc[Hello Collision]
-*** xref:jme3/beginner/hello_terrain.adoc[Hello Terrain]
-*** xref:jme3/beginner/hello_audio.adoc[Hello Audio]
-*** xref:jme3/beginner/hello_effects.adoc[Hello Effects]
-*** xref:jme3/beginner/hello_physics.adoc[Hello Physics]
+*** <<jme3/beginner/hello_simpleapplication#,Hello SimpleApplication>>
+*** <<jme3/beginner/hello_node#,Hello Node>>
+*** <<jme3/beginner/hello_asset#,Hello Asset>>
+*** <<jme3/beginner/hello_main_event_loop#,Hello Main Event Loop>>
+*** <<jme3/beginner/hello_input_system#,Hello Input System>>
+*** <<jme3/beginner/hello_material#,Hello Material>>
+*** <<jme3/beginner/hello_animation#,Hello Animation>>
+*** <<jme3/beginner/hello_picking#,Hello Picking>>
+*** <<jme3/beginner/hello_collision#,Hello Collision>>
+*** <<jme3/beginner/hello_terrain#,Hello Terrain>>
+*** <<jme3/beginner/hello_audio#,Hello Audio>>
+*** <<jme3/beginner/hello_effects#,Hello Effects>>
+*** <<jme3/beginner/hello_physics#,Hello Physics>>
 ** Intermediate Tutorials
 *** Concepts
-**** xref:jme3/intermediate/best_practices.adoc[Best Practices]
-**** xref:jme3/intermediate/simpleapplication.adoc[Simple Application]
-**** xref:jme3/features.adoc[Features]
-**** xref:jme3/intermediate/optimization.adoc[Optimization]
-**** xref:jme3/faq.adoc[FAQ]
+**** <<jme3/intermediate/best_practices#,Best Practices>>
+**** <<jme3/intermediate/simpleapplication#,Simple Application>>
+**** <<jme3/features#,Features>>
+**** <<jme3/intermediate/optimization#,Optimization>>
+**** <<jme3/faq#,FAQ>>
 *** Math Concepts
-**** xref:jme3/math_for_dummies.adoc[Math For Dummies]
-**** xref:jme3/intermediate/math.adoc[Math]
-**** xref:jme3/math.adoc[More Math]
-**** xref:jme3/rotate.adoc[Rotate]
-**** xref:jme3/math_video_tutorials.adoc[Math Video Tutorials]
+**** <<jme3/math_for_dummies#,Math For Dummies>>
+**** <<jme3/intermediate/math#,Math>>
+**** <<jme3/math#,More Math>>
+**** <<jme3/rotate#,Rotate>>
+**** <<jme3/math_video_tutorials#,Math Video Tutorials>>
 *** 3D Graphics Concepts
-**** xref:jme3/intermediate/multi-media_asset_pipeline.adoc[Multi-Media Asset Pipeline]
-**** xref:jme3/scenegraph_for_dummies.adoc[Scenegraph for Dummies]
-**** xref:jme3/beginner/hellovector.adoc[Hello Vector]
-**** xref:jme3/terminology.adoc[Terminology]
-**** xref:jme3/intermediate/how_to_use_materials.adoc[How to Use Materials]
-**** xref:jme3/intermediate/transparency_sorting.adoc[Transparency and Sorting]
-**** xref:jme3/external/blender.adoc[Importing from Blender]
-**** xref:jme3/external/3dsmax.adoc[Importing from 3DS Max]
-* xref:logo.adoc[Logo Usage]
-* xref:bsd_license.adoc[License]
-* xref:github_tips.adoc[Github Tips]
+**** <<jme3/intermediate/multi-media_asset_pipeline#,Multi-Media Asset Pipeline>>
+**** <<jme3/scenegraph_for_dummies#,Scenegraph for Dummies>>
+**** <<jme3/beginner/hellovector#,Hello Vector>>
+**** <<jme3/terminology#,Terminology>>
+**** <<jme3/intermediate/how_to_use_materials#,How to Use Materials>>
+**** <<jme3/intermediate/transparency_sorting#,Transparency and Sorting>>
+**** <<jme3/external/blender#,Importing from Blender>>
+**** <<jme3/external/3dsmax#,Importing from 3DS Max>>
+* <<logo#,Logo Usage>>
+* <<bsd_license#,License>>
+* <<github_tips#,Github Tips>>
 
 .SDK
-* xref:sdk.adoc[jMonkeyEngine SDK]
+* <<sdk#,jMonkeyEngine SDK>>
